[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansible-semaphore-client"
version = "0.0.2"
authors = [
  { name="Vítězslav Dvořák", email="info@vitexsoftware.com" },
]

dependencies = [
    "urllib3",
    "python-dateutil"
]

description = "Ansible Semaphore client library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/VitexSoftware/libpython-semaphore-client"
"Bug Tracker" = "https://github.com/VitexSoftware/libpython-semaphore-client/issues"
